# relais

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
crates/adapters/github/: Cargo.toml
crates/adapters/github/src/: lib.rs
crates/adapters/github/tests/: github_test.rs
crates/adapters/hackernews/: Cargo.toml
crates/adapters/hackernews/src/: lib.rs
crates/adapters/hackernews/tests/: hackernews_test.rs
crates/adapters/scs/: Cargo.toml  README.md
crates/adapters/scs-legacy/: Cargo.toml  README.md  scs_legacy_spec.json
crates/adapters/scs-legacy/generate/: gen_spec.py  schema_sync.py  test_gen_spec.py
crates/adapters/scs-legacy/src/: lib.rs
crates/adapters/scs-legacy/tests/: scs_legacy_business_test.rs  scs_legacy_e2e_test.rs  scs_legacy_http_test.rs  scs_legacy_order_flow_test.rs  scs_legacy_sweep_test.rs  scs_legacy_writepath_test.rs
crates/adapters/scs/src/: lib.rs
crates/adapters/scs/tests/: scs_e2e_test.rs  scs_http_test.rs  scs_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: apis.rs  audit.rs  auth.rs  exec.rs  mod.rs  serve.rs  sites.rs  spec.rs  vault.rs
crates/cli/tests/: cli_test.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  error.rs  http.rs  lib.rs  net_guard.rs  oauth.rs  redact.rs  router.rs  token_refresh.rs  types.rs  vault.rs
crates/core/src/audit/: envelope.rs  key.rs  mod.rs  redact.rs  sidecar.rs  verify.rs  writer.rs
crates/core/tests/: router_test.rs  token_refresh_test.rs  types_test.rs  vault_test.rs
crates/llm-fallback/: Cargo.toml
crates/llm-fallback/src/: browser.rs  extractor.rs  lib.rs
crates/llm-fallback/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/llm-fallback/tests/: cookie_test.rs  extractor_test.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  handlers.rs  lib.rs  state.rs
crates/server/tests/: api_test.rs  e2e_test.rs
docs/design/: auto-adapter-pipeline.md  security-hardening.md  signet-audit-impl.md  signet-audit-integration.md
docs/scs/: customer-goods-relais-adaptation.md
scripts/: customer_onboarding_relais.py  goods_create_relais.py  goods_shelf_submit_relais.py  order_flow_relais.py  order_flow_test.ps1  scs_relais_common.py
skills/scs-accounts/: SKILL.md
skills/scs-customer-onboarding/: SKILL.md
skills/scs-customer-onboarding/agents/: openai.yaml
skills/scs-goods-flow/: SKILL.md
skills/scs-goods-flow/agents/: openai.yaml
skills/scs-legacy/: SKILL.md
skills/scs-order-flow/: SKILL.md
