[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/cli",
    "crates/llm-fallback",
    "crates/adapters/github",
    "crates/adapters/hackernews",
    "crates/adapters/scs",
    "crates/adapters/scs-legacy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/willamhou/relais"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

relais-core = { path = "crates/core", version = "0.1.0" }
relais-server = { path = "crates/server", version = "0.1.0" }
relais-llm-fallback = { path = "crates/llm-fallback", version = "0.1.0" }
relais-adapter-github = { path = "crates/adapters/github", version = "0.1.0" }
relais-adapter-hackernews = { path = "crates/adapters/hackernews", version = "0.1.0" }
relais-adapter-scs = { path = "crates/adapters/scs", version = "0.1.0" }
relais-adapter-scs-legacy = { path = "crates/adapters/scs-legacy", version = "0.1.0" }
