[package]
name = "relais-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relais"
path = "src/main.rs"

[dependencies]
relais-core.workspace = true
relais-server.workspace = true
relais-adapter-github.workspace = true
relais-adapter-hackernews.workspace = true
relais-llm-fallback.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
