[package]
name = "relais-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for the relais API gateway (installs the `relais` binary)."
repository.workspace = true

[features]
default = []
# Enables cryptographic call auditing (signet) and the `relais audit` commands.
audit = ["relais-core/audit", "relais-server/audit"]

[lib]
name = "relais_cli"
path = "src/lib.rs"

[[bin]]
name = "relais"
path = "src/main.rs"

[dependencies]
relais-core.workspace = true
relais-server.workspace = true
relais-adapter-github.workspace = true
relais-adapter-hackernews.workspace = true
relais-adapter-scs.workspace = true
relais-adapter-scs-legacy.workspace = true
relais-llm-fallback.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
anyhow.workspace = true
dirs = "5"
axum = "0.8"
open = "5"
urlencoding = "2"
rand = "0.8"
chrono.workspace = true
