[package]
name = "relais-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, types, and credential vault for the relais API gateway."
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true
sled = "0.34"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
