[package]
name = "relais-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits, types, and credential vault for the relais API gateway."
repository.workspace = true

[features]
default = []
# Cryptographic call auditing via signet (opt-in). sha2 is already a core dep below
# (used by vault.rs) and is reused for hash recompute — not re-listed as optional.
audit = ["dep:signet-core", "dep:ed25519-dalek", "dep:json-canon", "dep:hex", "dep:base64", "dep:tokio", "dep:tracing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true
sled = "0.34"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# audit feature (signet integration)
signet-core = { version = "0.10", optional = true }
ed25519-dalek = { version = "2", optional = true }
json-canon = { version = "0.1", optional = true }
hex = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }
tokio = { workspace = true, optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
