[package]
name = "relais-llm-fallback"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM/browser-driven fallback adapter for the relais API gateway."
repository.workspace = true

[dependencies]
relais-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures-util = "0.3"
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
chrono.workspace = true
