[package]
name = "relais-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relais-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing.workspace = true
jsonwebtoken = "9"
