[package]
name = "relais-adapter-github"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GitHub adapter for the relais API gateway."
repository.workspace = true

[dependencies]
relais-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
