[package]
name = "relais-adapter-scs-legacy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
relais-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
