[package]
name = "relais-adapter-scs-legacy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Legacy SCS (Beego) adapter for the relais API gateway — generated, data-driven over the full /1 action API."
repository.workspace = true
readme = "README.md"

[dependencies]
relais-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
futures = "0.3"
